--- a/res/layout/sepia_activity.xml
+++ b/res/layout/sepia_activity.xml
@@ -6,22 +6,28 @@
 	android:orientation="vertical" android:layout_height="wrap_content"  android:layout_weight="1" android:layout_width="0dp">
 			<Button android:text="RenderScript" android:id="@+id/sepia_buttonRS"
 				android:layout_width="wrap_content" android:layout_height="wrap_content"
-				android:layout_margin="5dip"></Button>
+				android:layout_margin="5dip"
+				android:layout_gravity="right"></Button>
 			<TextView android:layout_width="wrap_content" android:id="@+id/sepia_tv_rs"
 				android:layout_height="wrap_content" android:text="..."
-				android:textSize="30dip" android:layout_margin="5dip" />
+				android:textSize="30dip" android:layout_margin="5dip" 
+				android:layout_gravity="right"/>
 			<Button android:text="Java" android:id="@+id/sepia_buttonJava"
 				android:layout_width="wrap_content" android:layout_height="wrap_content"
-				android:layout_margin="5dip"></Button>
+				android:layout_margin="5dip"
+				android:layout_gravity="right"></Button>
 			<TextView android:layout_width="wrap_content" android:id="@+id/sepia_tv_java"
 				android:layout_height="wrap_content" android:text="..."
-				android:textSize="30dip" android:layout_margin="5dip" />
+				android:textSize="30dip" android:layout_margin="5dip" 
+				android:layout_gravity="right"/>
 			<Button android:text="Java 2 Threads" android:id="@+id/sepia_buttonJavaThreads"
 				android:layout_width="wrap_content" android:layout_height="wrap_content"
-				android:layout_margin="5dip"></Button>
+				android:layout_margin="5dip"
+				android:layout_gravity="right"></Button>
 			<TextView android:layout_width="wrap_content" android:id="@+id/sepia_tv_javathreads"
 				android:layout_height="wrap_content" android:text="..."
-				android:textSize="30dip" android:layout_margin="5dip" />
+				android:textSize="30dip" android:layout_margin="5dip" 
+				android:layout_gravity="right"/>
 	</LinearLayout>
 	<ImageView android:layout_height="wrap_content" android:id="@+id/sepia_imageView1"
 		android:src="@drawable/sunset" android:layout_weight="5" android:layout_width="0dp"></ImageView>
